k8s/prometheus/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
      - image: nexus-storage.tools.threeq.com/community/monitor/prometheus/prometheus:v2.1.0-build
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: nexus-storage.tools.threeq.com.key
status: {}
