k8s/prometheus/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  ports:
  - name: "9093"
    port: 9093
    targetPort: 9093
  selector:
    io.kompose.service: alertmanager
status:
  loadBalancer: {}
