k8s/prometheus/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.8.0 (0c0c027)
  creationTimestamp: null
  labels:
    io.kompose.service: pushgateway
  name: pushgateway
  namespace: monitoring
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9091
  selector:
    io.kompose.service: pushgateway
status:
  loadBalancer: {}
