k8s/prometheus/alertmanager-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: prometheus-alert.k8s.tools.threeq.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager 
          servicePort: 9093
